--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@config-plugins/detox": "~8.0.0",
     "@expo/cli": "~0.18.13",
     "@nx/detox": "19.2.2",
+    "@nx/devkit": "19.2.2",
     "@nx/eslint": "19.2.2",
     "@nx/eslint-plugin": "19.2.2",
     "@nx/expo": "19.2.2",
     "@nx/jest": "19.2.2",
     "@nx/js": "19.2.2",
+    "@nx/playwright": "19.2.2",
     "@nx/workspace": "19.2.2",
+    "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -46,6 +49,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
