--- a/apps/with-ts-config/project.json
+++ b/apps/with-ts-config/project.json
@@ -5,5 +5,12 @@
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project with-ts-config --web",
-  "targets": {}
+  "targets": {
+    "custom-start": {
+      "executor": "@nx/expo:start",
+      "options": {
+        "port": 8081
+      }
+    }
+  }
 }
